sample/asm/errors/msg_requires_at_least_one_parameter.asm
.function: main
    frame 0
    msg 0 foo

    izero 0
    return
.end
